--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "pdf": "bash scripts/generate-pdf.sh"
+    "pdf": "bash scripts/generate-pdf.sh",
+    "postinstall": "node scripts/setup-typst.mjs"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.78.0",
